--- a/styles/utility.css
+++ b/styles/utility.css
@@ -25,6 +25,10 @@
     padding-block: var(--py-lg);
 }
 
+.desktop-only {
+    display: none;
+}
+
 @media (width >= 80em) {
     .container {
         --max-width: 80rem;
@@ -32,5 +36,8 @@
     .even-columns {
         grid-auto-flow: column;
         grid-auto-columns: 1fr;
+    }
+    .desktop-only {
+        display: initial;
     }
 }
