--- a/styles/global.css
+++ b/styles/global.css
@@ -38,6 +38,11 @@ nav {
     }
 }
 
+img {
+    max-width: 100%;
+    display: inline-block;
+}
+
 ul[role='list'] {
     list-style: none;
 }
@@ -49,6 +54,7 @@ h1 {
 
 a {
     text-decoration: none;
+    color: var(--text-color-secondary);
 }
 
 a:hover {
