--- a/styles/about.css
+++ b/styles/about.css
@@ -40,6 +40,7 @@
         max-width: 100%;
     }
     .main {
+        max-width: 37rem;
         display: flex;
         gap: 2rem;
         & img {
