--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,10 +1,10 @@
 .container {
     --max-width: 375px;
-    margin-inline: auto;
 }
 
 .even-columns {
-    display: grid;
+    display: flex;
+    flex-flow: column;
     gap: 1rem;
 }
 
@@ -33,8 +33,8 @@
         --max-width: 80rem;
     }
     .even-columns {
-        grid-auto-flow: column;
-        grid-auto-columns: 1fr;
+        flex-flow: row;
+
     }
     .desktop-only {
         display: initial;
